--- a/gallery.html
+++ b/gallery.html
@@ -266,7 +266,7 @@
     <div class="mcb-wrap-inner">
         <div class="column mcb-column one column_hover_box">
             <div class="hover_box">
-                <a href="https://youtu.be/4GzNyiYebL0" rel="prettyphoto">
+                <a href="https://youtu.be/AxR_9JXbFX0" rel="prettyphoto">
                     <div class="hover_box_wrapper">
                         <img class="visible_photo scale-with-grid" src="images/yt.png">
                         <img class="hidden_photo scale-with-grid" src="images/yt.png">
