--- a/contact.html
+++ b/contact.html
@@ -312,10 +312,10 @@
     <script src="/assets/js/jquery.jplayer.min.js"></script>
     <script src="/assets/js/animations/animations.js"></script>
     <script src="/assets/js/translate3d.js"></script>
-    <script src="/assets/js/scripts.js"></script>
+    <script src="assets/js/scripts.js"></script>
 
 
 
-</body>
+</body>S
 
 </html>
