--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     <link rel="shortcut icon" href="/images/logo (2).png">
 
     <!-- JS -->
-    <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=sIPfDGwurPriFK_15E2ChG0dIb2Po28ENg_vlFkbYTSG5ny30KQtspVGqZ6sMnOBICCB9EXtybihkLwDrSRK4B0Gm8IdqqI48Vo2VyyRauq0fRElAHiQt9ZTG_ijUhCx-3bUBzlDXfx6C8RjPGmcn5sLkei2IQzZlvclULSvzWJkwxWEFM77sZtxkVKCm_URHjqZAlbit4xXfUZOwh3kgw" charset="UTF-8"></script><link rel="stylesheet" crossorigin="anonymous" href="https://gc.kis.v2.scr.kaspersky-labs.com/E3E8934C-235A-4B0E-825A-35A08381A191/abn/main.css?attr=aHR0cHM6Ly9oZGVjbG91ZC5wcml2YXRlc2Ruc2VydmVycy5jb206MjA4My9jcHNlc3M5ODY3MjcyODE0L2Rvd25sb2FkP3NraXBlbmNvZGU9MSZmaWxlPSUyZmhvbWUlMmZpZWZvanJtZiUyZnB1YmxpY19odG1sJTJmY29udGFjdC5odG1s"/><script src="js/script.js"></script>
+    <script src="js/script.js"></script>
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
     </script>
@@ -54,7 +54,7 @@
                         <div class="column one">
                             <div class="top_bar_left clearfix">
                                 <div class="logo">
-                                    <a id="logo" href="/index.html" title="BeFireBrigade - Betheme" data-height="80" data-padding="30"><img class="logo-main scale-with-grid" src="images/firebrigade_logo.png" data-retina="images/firebrigade_logo_2x.png" data-height="95"><img class="logo-sticky scale-with-grid" src="images/logo_sticky.png" data-retina="images/logo-sticky@2x.png" data-height="95"><img class="logo-mobile scale-with-grid" src="images/firebrigade_logo.png" data-retina="images/firebrigade_logo_2x.png" data-height="95"><img class="logo-mobile-sticky scale-with-grid" src="images/firebrigade_logo.png" data-retina="images/firebrigade_logo_2x.png" data-height="95"></a>
+                                    <a id="logo" href="/index.html" title="Fire Servie Department" data-height="80" data-padding="30"><img class="logo-main scale-with-grid" src="images/firebrigade_logo.png" data-retina="images/firebrigade_logo_2x.png" data-height="95"><img class="logo-sticky scale-with-grid" src="images/logo_sticky.png" data-retina="images/logo-sticky@2x.png" data-height="95"><img class="logo-mobile scale-with-grid" src="images/firebrigade_logo.png" data-retina="images/firebrigade_logo_2x.png" data-height="95"><img class="logo-mobile-sticky scale-with-grid" src="images/firebrigade_logo.png" data-retina="images/firebrigade_logo_2x.png" data-height="95"></a>
                                 </div>
                                 <div class="menu_wrapper">
                                     <nav id="menu">
@@ -121,7 +121,7 @@
                                                 </div>
                                                 <h6> CALL US
                                                     <br>
-                                                    <span class="themecolor">110 <br> 0112 422222</span>
+                                                    <span class="themecolor">110 <br> 0112686863</span>
                                                     
                                             </div>
                                         </div>
@@ -252,8 +252,8 @@
                                 <p>
                                     Emergency call?
                                 </p>
-                                <h3><a href="#">110<br>0112 422222<br>
-                                    0112 422223 <br></a></h3>
+                                <h3><a href="#">110<br> 0112686087<br>
+                                    0112686863 <br></a></h3>
                             </div>
                         </aside>
                     </div>
@@ -289,7 +289,7 @@
                     <div class="column one">
                         <a id="back_to_top" class="button button_js" href><i class="icon-up-open-big"></i></a>
                         <div class="copyright">
-                            &copy; 2023 - CMC Fire Service Department - HTML by <a target="_blank" rel="nofollow" href="https://www.facebook.com/profile.php?id=100092459050529&mibextid=LQQJ4d">Element Hive</a>
+                            &copy; 2023 - CMC Fire Service Department - HTML by <a target="_blank" rel="nofollow" href="https://elementhive.net/">Element Hive</a>
                         </div>
                         <ul class="social">
                             <li class="facebook">
@@ -312,10 +312,10 @@
     <script src="/assets/js/jquery.jplayer.min.js"></script>
     <script src="/assets/js/animations/animations.js"></script>
     <script src="/assets/js/translate3d.js"></script>
-    <script src="assets/js/scripts.js"></script>
+    <script src="/assets/js/scripts.js"></script>
 
 
 
-</body>S
+</body>
 
 </html>
