--- a/location.html
+++ b/location.html
@@ -42,7 +42,7 @@
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/leaflet@1.7.1/dist/leaflet.css"
         />
-        <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=-eknC6eS5M0pkI5JVQtBdMjYBijFwm5wUPNhOxBz9_SNCiWcShpprRVGv1V03oY71IBWHxBn4l7-jTxHSrjTWxYAZknm4AEC94R-Krgxald9DXwDfExas1lcZ6_gi0mYQNc5I1cOxLJdQ6HtCRfKgWbj3W_hKHc1ymCE6VYyXxiTEZXnMcC8P6PEjHO0f620rZq1Cc0PDmHU_9FdTMtdWQ" charset="UTF-8"></script><link rel="stylesheet" crossorigin="anonymous" href="https://gc.kis.v2.scr.kaspersky-labs.com/E3E8934C-235A-4B0E-825A-35A08381A191/abn/main.css?attr=aHR0cHM6Ly9oZGVjbG91ZC5wcml2YXRlc2Ruc2VydmVycy5jb206MjA4My9jcHNlc3M5ODY3MjcyODE0L2Rvd25sb2FkP3NraXBlbmNvZGU9MSZmaWxlPSUyZmhvbWUlMmZpZWZvanJtZiUyZnB1YmxpY19odG1sJTJmbG9jYXRpb24uaHRtbA"/><style>
+        <style>
             #map {
                 height: 100vh;
                 
@@ -65,7 +65,7 @@
                                         <a
                                             id="logo"
                                             href="/index.html"
-                                            title="BeFireBrigade - Betheme"
+                                            title="Fire Service Department"
                                             data-height="80"
                                             data-padding="30"
                                             ><img
@@ -246,12 +246,7 @@
                             >
                                 <div class="textwidget custom-html-widget">
                                     <p>Emergency call?</p>
-                                    <h3>
-                                        <a href="#"
-                                            >110<br />0112 422222<br />
-                                            0112 422223 <br
-                                        /></a>
-                                    </h3>
+                                    <h3><a href="#">110<br> 0112686087<br>0112686863<br></a></h3>
                                 </div>
                             </aside>
                         </div>
@@ -292,7 +287,7 @@
                         <div class="column one">
                             <a id="back_to_top" class="button button_js" href><i class="icon-up-open-big"></i></a>
                             <div class="copyright">
-                                &copy; 2023 - CMC Fire Service Department - HTML by <a target="_blank" rel="nofollow" href="https://www.facebook.com/profile.php?id=100092459050529&mibextid=LQQJ4d">Element Hive</a>
+                                &copy; 2023 - CMC Fire Service Department - HTML by <a target="_blank" rel="nofollow" href="https://elementhive.net/">Element Hive</a>
                             </div>
                             <ul class="social">
                                 <li class="facebook">
