--- a/CMC.html
+++ b/CMC.html
@@ -30,7 +30,7 @@
     <link rel='stylesheet' href='css/firebrigade.css'>
     <link rel='stylesheet' href='css/custom.css'>
 
-<script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=TnejFJTHkIQfj75oOrJbh2q01YOgK4u7f5438nNPMFs7fsmAaP_y8zr6OvQU4J05uFufhU6g5B_z00ck8NfIRGqcINZ7NSy8g3bzar-s-moxGtrg6-9DaCyEK-hFuUM78ED03UVvYJvnocSVufDHAWz1gwDVeZnkkw7QIAkhni1pHE10BQEf7mLNH8IZ6PbOqWxHpxLTuqUoWwL7FjRAyg" charset="UTF-8"></script><link rel="stylesheet" crossorigin="anonymous" href="https://gc.kis.v2.scr.kaspersky-labs.com/E3E8934C-235A-4B0E-825A-35A08381A191/abn/main.css?attr=aHR0cHM6Ly9oZGVjbG91ZC5wcml2YXRlc2Ruc2VydmVycy5jb206MjA4My9jcHNlc3M5ODY3MjcyODE0L2Rvd25sb2FkP3NraXBlbmNvZGU9MSZmaWxlPSUyZmhvbWUlMmZpZWZvanJtZiUyZnB1YmxpY19odG1sJTJmQ01DLmh0bWw"/></head>
+</head>
 
 <body class="post-template-default single single-post single-format-standard style-simple button-flat layout-full-width if-zoom no-content-padding hide-love header-transparent header-fw minimalist-header-no sticky-header sticky-tb-color ab-hide subheader-title-left menu-line-below-80-1 menuo-right menuo-no-borders mobile-tb-center mobile-mini-mr-ll tablet-sticky mobile-header-mini mobile-sticky">
     <div id="Wrapper">
@@ -42,7 +42,7 @@
                         <div class="column one">
                             <div class="top_bar_left clearfix">
                                 <div class="logo">
-                                    <a id="logo" href="/index-firebrigade.html" title="BeFireBrigade - Betheme" data-height="80" data-padding="30"><img class="logo-main scale-with-grid" src="images/firebrigade_logo.png" data-retina="images/firebrigade_logo_2x.png" data-height="95"><img class="logo-sticky scale-with-grid" src="images/logo_sticky.png" data-retina="images/logo-sticky@2x.png" data-height="95"><img class="logo-mobile scale-with-grid" src="images/firebrigade_logo.png" data-retina="images/firebrigade_logo_2x.png" data-height="95"><img class="logo-mobile-sticky scale-with-grid" src="images/firebrigade_logo.png" data-retina="images/firebrigade_logo_2x.png" data-height="95"></a>
+                                    <a id="logo" href="/index-firebrigade.html" title="Fire Serive Department" data-height="80" data-padding="30"><img class="logo-main scale-with-grid" src="images/firebrigade_logo.png" data-retina="images/firebrigade_logo_2x.png" data-height="95"><img class="logo-sticky scale-with-grid" src="images/logo_sticky.png" data-retina="images/logo-sticky@2x.png" data-height="95"><img class="logo-mobile scale-with-grid" src="images/firebrigade_logo.png" data-retina="images/firebrigade_logo_2x.png" data-height="95"><img class="logo-mobile-sticky scale-with-grid" src="images/firebrigade_logo.png" data-retina="images/firebrigade_logo_2x.png" data-height="95"></a>
                                 </div>
                                 <div class="menu_wrapper">
                                     <nav id="menu">
@@ -285,7 +285,7 @@
                                 <p>
                                     Emergency call?
                                 </p>
-                                <h3><a href="#">110<br>0112 422222<br>0112 422223<br></a></h3>
+                                <h3><a href="#">110<br>0112686087<br>0112686863<br></a></h3>
                             </div>
                         </aside>
                     </div>
@@ -319,7 +319,7 @@
                     <div class="column one">
                         <a id="back_to_top" class="button button_js" href><i class="icon-up-open-big"></i></a>
                         <div class="copyright">
-                            &copy; 2023 - CMC Fire Service Department - HTML by <a target="_blank" rel="nofollow" href="https://www.facebook.com/profile.php?id=100092459050529&mibextid=LQQJ4d">Element Hive</a>
+                            &copy; 2023 - CMC Fire Service Department - HTML by <a target="_blank" rel="nofollow" href="https://elementhive.net/">Element Hive</a>
                         </div>
                         <ul class="social">
                             <li class="facebook">
