--- a/department.html
+++ b/department.html
@@ -30,7 +30,7 @@
     <link rel='stylesheet' href='css/firebrigade.css'>
     <link rel='stylesheet' href='css/custom.css'>
 
-<script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=MNSvrgqXlynaRhNAFZ7pSR29Lx5kFsfbX6wtT3WPaVep3dwE5-dRwfmiFslwQ-Ks5xTQYoy7yhokdxXWulGvJWBmES-6ArTZzV0Y-NtH__G6N7uHIdUeFxrRJaylo5vCdPp1l-yS0UyC3c_-1jz5zTfl11f0DJzpUlEXsIklrHZMma6YjCQlblbfgB_6ebjdv7sM_HM4ZvOy7bdRyDX0XQ" charset="UTF-8"></script><link rel="stylesheet" crossorigin="anonymous" href="https://gc.kis.v2.scr.kaspersky-labs.com/E3E8934C-235A-4B0E-825A-35A08381A191/abn/main.css?attr=aHR0cHM6Ly9oZGVjbG91ZC5wcml2YXRlc2Ruc2VydmVycy5jb206MjA4My9jcHNlc3M5ODY3MjcyODE0L2Rvd25sb2FkP3NraXBlbmNvZGU9MSZmaWxlPSUyZmhvbWUlMmZpZWZvanJtZiUyZnB1YmxpY19odG1sJTJmZGVwYXJ0bWVudC5odG1s"/></head>
+</head>
 
 <body class="page style-simple button-flat layout-full-width if-zoom no-content-padding hide-love header-transparent header-fw minimalist-header-no sticky-header sticky-tb-color ab-hide subheader-title-left menu-line-below-80-1 menuo-right menuo-no-borders mobile-tb-center mobile-mini-mr-ll tablet-sticky mobile-header-mini mobile-sticky">
     <div id="Wrapper">
@@ -42,7 +42,7 @@
                         <div class="column one">
                             <div class="top_bar_left clearfix">
                                 <div class="logo">
-                                    <a id="logo" href="/index.html" title="BeFireBrigade - Betheme" data-height="80" data-padding="30"><img class="logo-main scale-with-grid" src="images/firebrigade_logo.png" data-retina="images/firebrigade_logo_2x.png" data-height="95"><img class="logo-sticky scale-with-grid" src="images/logo_sticky.png" data-retina="images/logo-sticky@2x.png" data-height="95"><img class="logo-mobile scale-with-grid" src="images/firebrigade_logo.png" data-retina="images/firebrigade_logo_2x.png" data-height="95"><img class="logo-mobile-sticky scale-with-grid" src="images/firebrigade_logo.png" data-retina="images/firebrigade_logo_2x.png" data-height="95"></a>
+                                    <a id="logo" href="/index.html" title="Fire Service Department" data-height="80" data-padding="30"><img class="logo-main scale-with-grid" src="images/firebrigade_logo.png" data-retina="images/firebrigade_logo_2x.png" data-height="95"><img class="logo-sticky scale-with-grid" src="images/logo_sticky.png" data-retina="images/logo-sticky@2x.png" data-height="95"><img class="logo-mobile scale-with-grid" src="images/firebrigade_logo.png" data-retina="images/firebrigade_logo_2x.png" data-height="95"><img class="logo-mobile-sticky scale-with-grid" src="images/firebrigade_logo.png" data-retina="images/firebrigade_logo_2x.png" data-height="95"></a>
                                 </div>
                                 <div class="menu_wrapper">
                                     <nav id="menu">
@@ -240,7 +240,7 @@
                                 <p>
                                     Emergency call?
                                 </p>
-                                <h3><a href="#">110<br>0112 422222<br>0112 422223<br></a></h3>
+                                <h3><a href="#">110<br> 0112686087<br>0112686863<br></a></h3>
                             </div>
                         </aside>
                     </div>
@@ -275,7 +275,7 @@
                     <div class="column one">
                         <a id="back_to_top" class="button button_js" href><i class="icon-up-open-big"></i></a>
                         <div class="copyright">
-                            &copy; 2023 - CMC Fire Service Department - HTML by <a target="_blank" rel="nofollow" href="https://www.facebook.com/profile.php?id=100092459050529&mibextid=LQQJ4d">Element Hive</a>
+                            &copy; 2023 - CMC Fire Service Department - HTML by <a target="_blank" rel="nofollow" href="https://elementhive.net/">Element Hive</a>
                         </div>
                         <ul class="social">
                             <li class="facebook">
@@ -308,3 +308,4 @@
 </body>
 
 </html>
+
