--- a/training.html
+++ b/training.html
@@ -369,7 +369,7 @@
                                 <p>
                                     Emergency call?
                                 </p>
-                                <h3><a href="#">110<br> 0112686087<br>0112686863<br></a></h3>
+                                <h3><a href="#">110<br> 0112 422222<br>0112 422223<br></a></h3>
                             </div>
                         </aside>
                     </div>
