--- a/contact.html
+++ b/contact.html
@@ -121,7 +121,7 @@
                                                 </div>
                                                 <h6> CALL US
                                                     <br>
-                                                    <span class="themecolor">110 <br> 0112686863</span>
+                                                    <span class="themecolor">110 <br> 0112 422222<br>0112 422223</span>
                                                     
                                             </div>
                                         </div>
@@ -252,8 +252,7 @@
                                 <p>
                                     Emergency call?
                                 </p>
-                                <h3><a href="#">110<br> 0112686087<br>
-                                    0112686863 <br></a></h3>
+                                <h3><a href="#">110<br> 0112 422222<br>0112 422223<br></a></h3>
                             </div>
                         </aside>
                     </div>
