--- a/course.html
+++ b/course.html
@@ -96,7 +96,7 @@
                 <div id="Subheader">
                     <div class="container">
                         <div class="column one">
-                            <h1 class="title">FIRE PREVENTION DIVISION</h1>
+                            <h1 class="title">FIRE <br>FIGHTING COURSE</h1>
                         </div>
                     </div>
                 </div>
@@ -120,9 +120,10 @@
                                                 <div
                                                     class="column_attr clearfix align_center"
                                                 >
-                                                <h3><b>THE PREVENTIVE ASPECT</b></h3> <br>
-                                                   <h6>Prevention of fires is the main function of this department. Encouraging the public to follow fire prevention initiatives, creating awareness about hazardous materials, identifying, and preventing.</h6><br>
-                                                   <h6>Emergencies, are the other tasks undertaken by this division.</h6><br><br>
+                                                <h3><b>Training</b></h3> <br>
+                                                   <h6>The training is basically followed with IFE standard. <br>
+                                                    08 Months course period. The once who successfully completed the course wil receive NVQ level Standard certificate.
+                                                   </h6><br><br>
                                                    <div class="section mcb-section" style="padding-top:20px">
                                                     <div class="section_wrapper mcb-section-inner">
                                                         <div class="wrap mcb-wrap one valign-top clearfix">
