--- a/index.html
+++ b/index.html
@@ -225,10 +225,10 @@
                                         <div class="column mcb-column one column_image">
                                             <div class="image_frame image_item scale-with-grid no_border" style="margin-top:15px;margin-bottom:15px;">
                                                 <div class="image_wrapper">
-                                                    <a href="/team.html">
-                                                        <div class="mask"></div><img class="scale-with-grid" src="/images/fb-home-team.jpg"></a>
+                                                    <a href="/course.html">
+                                                        <div class="mask"></div><img class="scale-with-grid" src="/images/fire.jpg"></a>
                                                     <div class="image_links">
-                                                        <a href="/team.html" class="link"><i class="icon-link"></i></a>
+                                                        <a href="/course.html" class="link"><i class="icon-link"></i></a>
                                                     </div>
                                                 </div>
                                             </div>
