--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                                         <div class="column mcb-column one column_column">
                                             <div class="column_attr clearfix" style="padding:0 10px;">
                                                 <h2>JOB SEEKERS
-                                                    FIRE FIGHTING 
+                                                    FIRE & RESCUE
                                                     COURSE</h2>
                                             </div>
                                         </div>
