--- a/course.html
+++ b/course.html
@@ -196,26 +196,14 @@
                                                 <h6> Venue : Fire & Rescue Traning Acedemy, Roxy Gardens, Wellawatte, Colombo 06</h6><br>
                                                 <h6> Course Fee : Rs. 40,000</h6><br>
                                                 <p>For more details please Contact Mr.Ranjan Kumara <br>Tele No: 071 325 5054<br>
+                                                    Email your application to tra.firerescue@gmail.com<br>
                                                 Limited Seats Available.</p>
                                                 <div class="column mcb-column one column_button">
                                                     <a class="button button_size_2 button_dark button_js" href="images/Fire Course Application.png"><span class="button_label">Apply Now</span></a>
                                                 </div>
 
 
-                                                   <div class="section mcb-section" style="padding-top:20px">
-                                                    <div class="section_wrapper mcb-section-inner">
-                                                        <div class="wrap mcb-wrap one valign-top clearfix">
-                                                            <div class="mcb-wrap-inner">
-                                                                <div class="column mcb-column one column_image">
-                                                                    <div class="image_frame image_item no_link scale-with-grid aligncenter stretch no_border">
-                                                                        <div class="image_wrapper"><img class="scale-with-grid" src="images/Fire Course.jpg">
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
+                                                 
                                                     </div>
                                             </div>
                                         </div>
