--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                             </p>
                         </div>
 
-                        <br><br><br>
+                        <br>
 
                         <div class="section mcb-section equal-height-wrap bg-contain" style="padding-top:100px;padding-bottom:70px;background-image:url(content/firebrigade/images/fb-home-bg.png);background-repeat:repeat-y;background-position:center top">
                             <div class="section_wrapper mcb-section-inner">
@@ -226,7 +226,7 @@
                                             <div class="image_frame image_item scale-with-grid no_border" style="margin-top:15px;margin-bottom:15px;">
                                                 <div class="image_wrapper">
                                                     <a href="/course.html">
-                                                        <div class="mask"></div><img class="scale-with-grid" src="/images/fire.jpg"></a>
+                                                        <div class="mask"></div><img class="scale-with-grid" src="/images/Fire Course.jpg"></a>
                                                     <div class="image_links">
                                                         <a href="/course.html" class="link"><i class="icon-link"></i></a>
                                                     </div>
