--- a/course.html
+++ b/course.html
@@ -192,9 +192,9 @@
                                                     </div>
                                                 </div>
 
-                                                <h6> Starting Date 1st of November 2023</h6><br>
+                                                <h6> Starting Date 4th March 2024</h6><br>
                                                 <h6> Venue : Fire & Rescue Traning Acedemy, Roxy Gardens, Wellawatte, Colombo 06</h6><br>
-                                                <h6> Course Fee : Rs. 40,000</h6><br>
+                                                <h6> Course Fee : Rs. 54,000</h6><br>
                                                 <p>For more details please Contact Mr.Ranjan Kumara <br>Tele No: 071 325 5054<br>
                                                     Email your application to tra.firerescue@gmail.com<br>
                                                 Limited Seats Available.</p>
