--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                                             <div class="image_frame image_item scale-with-grid no_border" style="margin-top:15px;margin-bottom:15px;">
                                                 <div class="image_wrapper">
                                                     <a href="/course.html">
-                                                        <div class="mask"></div><img class="scale-with-grid" src="/images/Fire Course.jpg"></a>
+                                                        <div class="mask"></div><img class="scale-with-grid" src="/images/Fire Course (1).jpg"></a>
                                                     <div class="image_links">
                                                         <a href="/course.html" class="link"><i class="icon-link"></i></a>
                                                     </div>
