--- a/course.html
+++ b/course.html
@@ -199,7 +199,7 @@
                                                     Email your application to tra.firerescue@gmail.com<br>
                                                 Limited Seats Available.</p>
                                                 <div class="column mcb-column one column_button">
-                                                    <a class="button button_size_2 button_dark button_js" href="images/Fire Course Application.png"><span class="button_label">Apply Now</span></a>
+                                                    <a class="button button_size_2 button_dark button_js" href="images/fire QR.png"><span class="button_label">Apply Now</span></a>
                                                 </div>
 
 
