--- a/news.html
+++ b/news.html
@@ -130,8 +130,8 @@
 
                                                         <div class="column_attr clearfix align_center">
                                                             <h2>2024 International Fire Fighters Day<span class="themecolor"> <br>Events</span></h2>
-                                                                <p>The collaboration between the Colombo Fire Service Department and the Colombo Lotus Tower for the joint fire drill on International Fire Brigade Day 
-                                                                    exemplifies the importance of proactive measures in ensuring community safety. It highlights the significance of emergency preparedness initiatives undertaken by 
+                                                                <p>On April 5, 2024, the Colombo Fire Service Department and the Colombo Lotus Tower conducted a successful joint fire drill in honor of International Fire Brigade Day.
+                                                                    It highlights the significance of emergency preparedness initiatives undertaken by 
                                                                     organizations to safeguard lives and property. This collaborative effort not only fosters stronger ties between institutions but also 
                                                                     underscores the critical role played by fire brigades in mitigating risks and responding effectively to emergencies.</p>
                                                         </div>
