--- a/news.html
+++ b/news.html
@@ -130,7 +130,7 @@
 
                                                         <div class="column_attr clearfix align_center">
                                                             <h2>2024 International Fire Fighters Day<span class="themecolor"> <br>Events</span></h2>
-                                                                <p>On April 5, 2024, the Colombo Fire Service Department and the Colombo Lotus Tower conducted a successful joint fire drill in honor of International Fire Brigade Day.
+                                                                <p>On May 5, 2024, the Colombo Fire Service Department and the Colombo Lotus Tower conducted a successful joint fire drill in honor of International Fire Fighters Day.
                                                                     It highlights the significance of emergency preparedness initiatives undertaken by 
                                                                     organizations to safeguard lives and property. This collaborative effort not only fosters stronger ties between institutions but also 
                                                                     underscores the critical role played by fire brigades in mitigating risks and responding effectively to emergencies.</p>
@@ -330,6 +330,11 @@
                                                                         <dl class="gallery-item">
                                                                             <dt class='gallery-icon portrait'>
                                                                                 <a href="images/funrel11.jpg"><img width="500" height="500" src="images/funrel11.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
+                                                                                </dt>
+                                                                        </dl>
+                                                                        <dl class="gallery-item">
+                                                                            <dt class='gallery-icon portrait'>
+                                                                                <a href="images/funrel12.jpg"><img width="500" height="500" src="images/funrel12.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
                                                                                 </dt>
                                                                         </dl>
                                                                         <br style="clear: both">
