--- a/news.html
+++ b/news.html
@@ -243,155 +243,24 @@
                                                                     with a dignified funeral on April 24, 2024. Mr. Silva, who served the department for a significant period, 
                                                                     was respected by all firefighters for his exemplary leadership and commitment to service.</p>
                                                         </div>
+                                                        
                                                         <div class="wrap mcb-wrap one valign-top clearfix">
                                                             <div class="mcb-wrap-inner">
                                                                 <div class="column mcb-column one column_image_gallery">
                                                                     <div id="sc_gallery-1" class='gallery galleryid-56 gallery-columns-3 gallery-size-thumbnail file'>
                                                                         <dl class="gallery-item">
                                                                             <dt class='gallery-icon portrait'>
-                                                                                    <a href="images/funrel1.jpg"><img width="500" height="500" src="images/funrel1.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
+                                                                                    <a href="images/tower10.jpg"><img width="500" height="500" src="images/tower10.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
                                                                                 </dt>
                                                                         </dl>
                                                                         <dl class="gallery-item">
                                                                             <dt class='gallery-icon portrait'>
-                                                                                <a href="images/funrel10.jpg"><img width="500" height="500" src="images/funrel10.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
+                                                                                <a href="images/tower11.jpg"><img width="500" height="500" src="images/tower11.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
                                                                                 </dt>
                                                                         </dl>
                                                                         <dl class="gallery-item">
                                                                             <dt class='gallery-icon portrait'>
-                                                                                    <a href="images/funrel2.jpg"><img width="500" height="500" src="images/funrel2.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
-                                                                                </dt>
-                                                                        </dl>
-                                                                        <br style="clear: both">
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-
-                                                        <div class="wrap mcb-wrap one valign-top clearfix">
-                                                            <div class="mcb-wrap-inner">
-                                                                <div class="column mcb-column one column_image_gallery">
-                                                                    <div id="sc_gallery-1" class='gallery galleryid-56 gallery-columns-3 gallery-size-thumbnail file'>
-                                                                        <dl class="gallery-item">
-                                                                            <dt class='gallery-icon portrait'>
-                                                                                    <a href="images/funrel4.jpg"><img width="500" height="500" src="images/funrel4.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
-                                                                                </dt>
-                                                                        </dl>
-                                                                        <dl class="gallery-item">
-                                                                            <dt class='gallery-icon portrait'>
-                                                                                <a href="images/funrel5.jpg"><img width="500" height="500" src="images/funrel5.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
-                                                                                </dt>
-                                                                        </dl>
-                                                                        <dl class="gallery-item">
-                                                                            <dt class='gallery-icon portrait'>
-                                                                                    <a href="images/funrel6.jpg"><img width="500" height="500" src="images/funrel6.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
-                                                                                </dt>
-                                                                        </dl>
-                                                                        <br style="clear: both">
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-
-                                                        <div class="wrap mcb-wrap one valign-top clearfix">
-                                                            <div class="mcb-wrap-inner">
-                                                                <div class="column mcb-column one column_image_gallery">
-                                                                    <div id="sc_gallery-1" class='gallery galleryid-56 gallery-columns-3 gallery-size-thumbnail file'>
-                                                                        <dl class="gallery-item">
-                                                                            <dt class='gallery-icon portrait'>
-                                                                                    <a href="images/funrel7.jpg"><img width="500" height="500" src="images/funrel7.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
-                                                                                </dt>
-                                                                        </dl>
-                                                                        <dl class="gallery-item">
-                                                                            <dt class='gallery-icon portrait'>
-                                                                                <a href="images/funrel8.jpg"><img width="500" height="500" src="images/funrel8.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
-                                                                                </dt>
-                                                                        </dl>
-                                                                        <dl class="gallery-item">
-                                                                            <dt class='gallery-icon portrait'>
-                                                                                    <a href="images/funrel9.jpg"><img width="500" height="500" src="images/funrel9.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
-                                                                                </dt>
-                                                                        </dl>
-                                                                        <br style="clear: both">
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-
-                                                        <div class="wrap mcb-wrap one valign-top clearfix">
-                                                            <div class="mcb-wrap-inner">
-                                                                <div class="column mcb-column one column_image_gallery">
-                                                                    <div id="sc_gallery-1" class='gallery galleryid-56 gallery-columns-3 gallery-size-thumbnail file'>
-                                                                        <dl class="gallery-item">
-                                                                            <dt class='gallery-icon portrait'>
-                                                                                    <a href="images/funrel3.jpg"><img width="500" height="500" src="images/funrel3.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
-                                                                                </dt>
-                                                                        </dl>
-                                                                        <dl class="gallery-item">
-                                                                            <dt class='gallery-icon portrait'>
-                                                                                <a href="images/funrel11.jpg"><img width="500" height="500" src="images/funrel11.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
-                                                                                </dt>
-                                                                        </dl>
-                                                                        <dl class="gallery-item">
-                                                                            <dt class='gallery-icon portrait'>
-                                                                                <a href="images/funrel12.jpg"><img width="500" height="500" src="images/funrel12.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
-                                                                                </dt>
-                                                                        </dl>
-                                                                        <br style="clear: both">
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-
-                                                        <div class="column_attr clearfix align_center">
-                                                            <h2>2nd Capacity Building Program for<span class="themecolor"> <br>Fire Fighting Personnel on Chemical Emergency
-                                                                Management.</span></h2>
-                                                                <p>Delighted to share the success of our 2nd Capacity Building Programme for Fire Fighting Personnel on Chemical Emergency Management, held from Dec 19-12, 2023. With 65 participants from diverse backgrounds, 
-                                                                    including BOI, police, navy, army, and air force, the event was a triumph. Through 
-                                                                    intensive training and collaboration, we enhanced emergency response capabilities. A heartfelt thank you to all participants, 
-                                                                    sponsors, and partners. Stay tuned for future endeavors in creating a safer and more resilient community!</p>
-                                                        </div>
-                                                        <div class="wrap mcb-wrap one valign-top clearfix">
-                                                            <div class="mcb-wrap-inner">
-                                                                <div class="column mcb-column one column_image_gallery">
-                                                                    <div id="sc_gallery-1" class='gallery galleryid-56 gallery-columns-3 gallery-size-thumbnail file'>
-                                                                        <dl class="gallery-item">
-                                                                            <dt class='gallery-icon portrait'>
-                                                                                    <a href="images/new 1.jpg"><img width="500" height="500" src="images/new 1.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
-                                                                                </dt>
-                                                                        </dl>
-                                                                        <dl class="gallery-item">
-                                                                            <dt class='gallery-icon portrait'>
-                                                                                <a href="images/new 2.jpg"><img width="500" height="500" src="images/new 2.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
-                                                                                </dt>
-                                                                        </dl>
-                                                                        <dl class="gallery-item">
-                                                                            <dt class='gallery-icon portrait'>
-                                                                                    <a href="images/new 3.jpg"><img width="500" height="500" src="images/new 3.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
-                                                                                </dt>
-                                                                        </dl>
-                                                                        <br style="clear: both">
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                        <div class="wrap mcb-wrap one valign-top clearfix">
-                                                            <div class="mcb-wrap-inner">
-                                                                <div class="column mcb-column one column_image_gallery">
-                                                                    <div id="sc_gallery-1" class='gallery galleryid-56 gallery-columns-3 gallery-size-thumbnail file'>
-                                                                        <dl class="gallery-item">
-                                                                            <dt class='gallery-icon portrait'>
-                                                                                    <a href="images/new 4.jpg"><img width="500" height="500" src="images/new 4.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
-                                                                                </dt>
-                                                                        </dl>
-                                                                        <dl class="gallery-item">
-                                                                            <dt class='gallery-icon portrait'>
-                                                                                <a href="images/new 5.jpg"><img width="500" height="500" src="images/new 5.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
-                                                                                </dt>
-                                                                        </dl>
-                                                                        <dl class="gallery-item">
-                                                                            <dt class='gallery-icon portrait'>
-                                                                                    <a href="images/new 6.jpg"><img width="500" height="500" src="images/new 6.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
+                                                                                    <a href="images/tower6.jpg"><img width="500" height="500" src="images/tower6.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
                                                                                 </dt>
                                                                         </dl>
                                                                         <br style="clear: both">
